@@ -44,7 +44,6 @@ import java.io.Serializable;
 import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 import static org.cirdles.tripoli.DataDictionary.isLegalETReduxName;
 import static org.cirdles.tripoli.constants.TripoliConstants.SPACES_100;
@@ -96,17 +95,17 @@ public class AnalysisMethod implements Serializable {
         AnalysisMethod analysisMethod = new AnalysisMethod(massSpecExtractedData.getHeader().methodName(), massSpecExtractedData.getMassSpectrometerContext());
         String[] columnHeaders = massSpecExtractedData.getColumnHeaders();
 
-        String regex = "[^alpha].*\\d?:?\\(?\\d{2,3}.{0,2}\\/[^alpha].*\\d?:?\\d{2,3}.{0,2}.*";
-        Pattern atomicWeightPattern = Pattern.compile("\\d+",Pattern.MULTILINE);
+        String regex = "[^alph].*\\d?:?\\(?\\d{2,3}.{0,2}\\/[^alph].*\\d?:?\\d{2,3}.{0,2}.*";
+        Pattern atomicWeightRatioPattern = Pattern.compile("\\d+", Pattern.MULTILINE);
         for (int i = 0; i < columnHeaders.length; i++) {
-            UserFunction userFunction = new UserFunction(columnHeaders[i].trim(), i - 0);
+            UserFunction userFunction = new UserFunction(columnHeaders[i].trim(), i);
             if (columnHeaders[i].matches(regex)) {
                 userFunction.setTreatAsIsotopicRatio(true);
                 userFunction.setReductionMode(TripoliConstants.ReductionModeEnum.CYCLE);
-                int indexOfDivide = columnHeaders[i].indexOf("/");
+
                 // detect three digits / three digits
                 List<String> numDen = new ArrayList<>();
-                Matcher matcher = atomicWeightPattern.matcher(columnHeaders[i]);
+                Matcher matcher = atomicWeightRatioPattern.matcher(columnHeaders[i]);
                 while (matcher.find()) {
                     numDen.add(matcher.group(0));
                 }
@@ -119,10 +118,10 @@ public class AnalysisMethod implements Serializable {
                 }
 
                 if (etReduxRatioName.compareTo("270_267") == 0) {
-                    r270_267ColumnIndex = i - 0;
+                    r270_267ColumnIndex = i;
                 }
                 if (etReduxRatioName.compareTo("265_267") == 0) {
-                    r265_267ColumnIndex = i - 0;
+                    r265_267ColumnIndex = i;
                 }
 
                 String invertedETReduxRatioName = denominator + "_" + numerator;
@@ -147,7 +146,7 @@ public class AnalysisMethod implements Serializable {
 
             System.arraycopy(columnHeaders, 0, columnHeadersExpanded, 0, columnHeaders.length);
 
-            columnHeadersExpanded[columnHeaders.length + 0] = "233/235oc";
+            columnHeadersExpanded[columnHeaders.length] = "233/235oc";
             UserFunction userFunction = new UserFunction(columnHeadersExpanded[columnHeaders.length], columnHeaders.length, true, true);
             userFunction.setEtReduxName("233_235");
             userFunction.setOxideCorrected(true);
@@ -167,7 +166,7 @@ public class AnalysisMethod implements Serializable {
 
             massSpecExtractedData.setColumnHeaders(columnHeadersExpanded);
 
-            System.out.println(columnHeaders[r270_267ColumnIndex + 0]);
+            System.out.println(columnHeaders[r270_267ColumnIndex]);
         }
         populateCustomExpressionFunctions(massSpecExtractedData, analysisMethod);
 
@@ -208,8 +207,8 @@ public class AnalysisMethod implements Serializable {
         List<PhoenixAnalysisMethod.BASELINE> baselineSequences = phoenixAnalysisMethod.getBASELINE();
         analysisMethod.baselineTable.setSequenceCount(baselineSequences.size());
 
-        // determine whether AxialCollector is Ax or PM in order to determine mass entries in baselineTable
-        Detector axialDetector = null;
+        // determine whether AxialCollector is Ax or PM to determine mass entries in baselineTable
+        Detector axialDetector;
         String axialCollectorName = phoenixAnalysisMethod.getSETTINGS().getAxialColl();
         if (axialCollectorName.startsWith("A")) {
             axialDetector = detectorSetup.getMapOfDetectors().get("Ax");
@@ -258,13 +257,13 @@ public class AnalysisMethod implements Serializable {
                             // rule per Noah - if <BLReference> empty or == "MASS", use <AxMass>, else mass from <BLReference>
                             double axMassOffset = Double.parseDouble(baselineSequences.get(baselineSequenceNumber - 1).getAxMassOffset());
                             String baselineRefs = baselineSequences.get(baselineSequenceNumber - 1).getBLReferences();
+                            double axMass;
                             if (baselineRefs.isBlank() || 0 == baselineRefs.compareToIgnoreCase("MASS")) {
-                                double axMass = Double.parseDouble(baselineSequences.get(baselineSequenceNumber - 1).getAxMass());
-                                baselineCell.setCellMass(axMass + axMassOffset);
+                                axMass = Double.parseDouble(baselineSequences.get(baselineSequenceNumber - 1).getAxMass());
                             } else {
-                                double axMass = Double.parseDouble(baselineRefs.split("(?<=\\d)(?=\\D)|(?=\\d)(?<=\\D)")[0]);
-                                baselineCell.setCellMass(axMass + axMassOffset);
+                                axMass = Double.parseDouble(baselineRefs.split("(?<=\\d)(?=\\D)|(?=\\d)(?<=\\D)")[0]);
                             }
+                            baselineCell.setCellMass(axMass + axMassOffset);
                         }
                     }
                 }
@@ -279,7 +278,7 @@ public class AnalysisMethod implements Serializable {
         analysisMethod.createListsOfIsotopicRatios();
 
         // post-process baselineTable to populate with masses
-        // TODO: make deltas more robust - Noah will have matlab code
+        // TODO: make deltas more robust - Noah will have MATLAB code
         Map<Detector, List<BaselineCell>> mapOfDetectorsToBaselineCells = analysisMethod.baselineTable.getMapOfDetectorsToBaselineCells();
         List<BaselineCell> axialBaselineCells = mapOfDetectorsToBaselineCells.get(axialDetector);
         // this index is used for either Ax or PM when calculating masses
@@ -293,7 +292,7 @@ public class AnalysisMethod implements Serializable {
                     List<BaselineCell> axialBaseLineCellListOfOne = axialBaselineCells
                             .stream()
                             .filter(c -> c.getBaselineSequence() == baselineCellIndex)
-                            .collect(Collectors.toList());
+                            .toList();
                     baselineCell.setCellMass((ordinalIndex - ordinalIndexOfAxial) + axialBaseLineCellListOfOne.get(0).getCellMass());
                 }
             }
@@ -363,22 +362,22 @@ public class AnalysisMethod implements Serializable {
     public String prettyPrintMethodSummary(boolean verbose) {
         StringBuilder retVal = new StringBuilder();
         retVal.append("Method: ").append(methodName).append(SPACES_100, 0, 75 - methodName.length());
-        if (speciesList.size() > 0) {
+        if (!speciesList.isEmpty()) {
             retVal.append(verbose ? "\nSpecies: " : "  Species: ");
             List<SpeciesRecordInterface> speciesAlphabetic = new ArrayList<>(speciesList);
-            Collections.sort(speciesAlphabetic, Comparator.comparing(s -> s.getAtomicMass()));
+            speciesAlphabetic.sort(Comparator.comparing(SpeciesRecordInterface::getAtomicMass));
             for (SpeciesRecordInterface species : speciesAlphabetic) {
-                retVal.append(species.prettyPrintShortForm() + " ");
+                retVal.append(species.prettyPrintShortForm()).append(" ");
             }
         }
         if (verbose) {
             retVal.append("\nIsotopicRatios: ");
             for (IsotopicRatio ratio : isotopicRatiosList) {
-                retVal.append("\n\t\t" + ratio.prettyPrint());
+                retVal.append("\n\t\t").append(ratio.prettyPrint());
             }
             for (UserFunction userFunction : userFunctionsModel) {
                 if (userFunction.isTreatAsIsotopicRatio()) {
-                    retVal.append("\n\t\t" + userFunction.getName());
+                    retVal.append("\n\t\t").append(userFunction.getName());
                 }
             }
         }
@@ -418,10 +417,6 @@ public class AnalysisMethod implements Serializable {
         return speciesList;
     }
 
-    public void setSpeciesList(List<SpeciesRecordInterface> speciesList) {
-        this.speciesList = speciesList;
-    }
-
     public void addSpeciesToSpeciesList(SpeciesRecordInterface species) {
         if (null == speciesList) {
             speciesList = new ArrayList<>();
@@ -433,12 +428,12 @@ public class AnalysisMethod implements Serializable {
 
 
     public void sortSpeciesListByAbundance() {
-        Collections.sort(speciesList, Comparator.comparing(s -> s.getMassNumber()));
+        speciesList.sort(Comparator.comparing(SpeciesRecordInterface::getMassNumber));
     }
 
     public List<SpeciesRecordInterface> getSpeciesListSortedByMass() {
         List<SpeciesRecordInterface> speciesListCopy = new ArrayList<>(speciesList);
-        Collections.sort(speciesListCopy, Comparator.comparing(s -> s.getMassNumber()));
+        speciesListCopy.sort(Comparator.comparing(SpeciesRecordInterface::getMassNumber));
         return speciesListCopy;
     }
 
@@ -510,7 +505,7 @@ public class AnalysisMethod implements Serializable {
 
 
     /**
-     * Creates a ratio of each species except the last one divided by the last one in specieslist
+     * Creates a ratio of each species except the last one divided by the last one in speciesList
      */
     public void createListsOfIsotopicRatios() {
         sortSpeciesListByAbundance();
@@ -531,14 +526,13 @@ public class AnalysisMethod implements Serializable {
             }
         }
         // remaining inverses
-        for (int i = 0; i < isotopicRatiosList.size(); i++) {
-            IsotopicRatio ratio = isotopicRatiosList.get(i);
+        for (IsotopicRatio ratio : isotopicRatiosList) {
             IsotopicRatio invertedRatio = new IsotopicRatio(ratio.getDenominator(), ratio.getNumerator(), false);
             addRatioToDerivedIsotopicRatiosList(invertedRatio);
             biMapOfRatiosAndInverses.put(ratio, invertedRatio);
         }
 
-        Collections.sort(derivedIsotopicRatiosList, (ratio1, ratio2) -> ratio1.getNumerator().compareTo(ratio2.getNumerator()));
+        derivedIsotopicRatiosList.sort(Comparator.comparing(IsotopicRatio::getNumerator));
     }
 
     public List<Report> getReports() {
